# bluetooth-dijkstra-pathfinder

./: .gitignore  LICENSE  README.md  build_as.sh  config.json  generator.py  init.resc  node_init_template.c.j2  tests.json  topology_config.json
.github/workflows/: build_and_test.yml
config-files/mb-paths/: square_corners_path.json
config-files/mesh-topology-desc/: basic_5_nodes.json  example.json
config-files/renode-resc-files/: basic_5_nodes.resc  randomized_topology.resc  test_node.resc
mobile-broadcaster/: prj.conf
mobile-broadcaster/src/: main.c
mobile_broadcaster/: prj.conf  sample.yaml
mobile_broadcaster/.cache/clangd/index/: main.c.D60260BB76C36E50.idx
mobile_broadcaster/boards/: rv32m1_vega_ri5cy.overlay
mobile_broadcaster/src/: main.c
node/: CMakeLists.txt  prj.conf
node/include/: bluetooth_ble.h  dijkstra.h  graph.h
node/src/: bluetooth_ble.c  dijkstra.c  graph.c  main.c
renode-commands/: move_radio.py
scripts/: generator.py  renode_commands.py  repeat_tests.sh  tests.json  tests.resc  topology.html  topology_randomizer.py
tests/: test_dijkstra_path_finding.robot  test_packet_travel_time.robot  test_renode_installation.robot  tests_runner.sh
zephyr-rtos/: .CMakeLists.txt.swp  CMakeLists.txt  \  buildnrf  nrfbuild  prj.conf
zephyr-rtos/.cache/clangd/index/: dijkstra.c.48D9C85B1B87B1D1.idx  dijkstra.h.39A27E18EB403527.idx  graph.c.0F7725A01F14DBF0.idx  graph.h.01C664C19699CF8D.idx  main.c.9278A96D8942446F.idx
zephyr-rtos/include/: bluetooth_ble.h  dijkstra.h  graph.h
zephyr-rtos/src/: bluetooth_ble.c  dijkstra.c  graph.c  main.c
zephyr-rtos/src/generated-src/: graph_init.c
